--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div>&#9733; <br> 1 hour for javascript  <br> 15.01.2022 </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+
+  <body>
+    <div>
+      &#9733; <br />
+      1 hour for javascript <br />
+      15.01.2022
+    </div>
+    <div>
+      &#9733; <br />
+      3 hours for javascript <br />
+      18.01.2022
+    </div>
+  </body>
 </html>
