--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <div>
-      &#9733; <br />
-      1 hour for javascript <br />
-      15.01.2022
+    <div class="div">
+      <div>
+        &#9733; <br />
+        1 hour for javascript <br />
+        15.01.2022
+      </div>
+      <div class="div2">
+        &#9733; <br />
+       <strong>7.5</strong>   <br />
+        All time
+      </div>
     </div>
+    
     <div>
       &#9733; <br />
       3 hours for javascript <br />
       18.01.2022
+    </div>
+    <div>
+      &#9733; <br />
+      3,5 hours for javascript <br />
+      19.01.2022
     </div>
   </body>
 </html>
