--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
       </div>
       <div class="div2">
         &#9733; <br />
-       <strong>7.5</strong>   <br />
+       <strong>12</strong>   <br />
         All time
       </div>
+    </div>
+
+    <div>
+      &#9733; <br />
+      4,5 hours for javascript <br />
+      20.01.2022
     </div>
     <div>
       &#9733; <br />
