--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-
     <div class="div">
       <div>
         &#9733; <br />
@@ -17,11 +16,15 @@
       </div>
       <div class="div2">
         &#9733; <br />
-       <strong>12</strong>   <br />
+        <strong>13</strong> <br />
         All time
       </div>
     </div>
-
+    <div>
+      &#9733; <br />
+      1 hour for javascript <br />
+      21.01.2022
+    </div>
     <div>
       &#9733; <br />
       4,5 hours for javascript <br />
@@ -37,6 +40,5 @@
       3 hours for javascript <br />
       18.01.2022
     </div>
-   
   </body>
 </html>
