--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
       </div>
       <div class="div2">
         &#9733; <br />
-        <strong>13</strong> <br />
+        <strong>15.5</strong> <br />
         All time
       </div>
+    </div>
+    <div>
+      &#9733; <br />
+      2.5 hours for javascript <br />
+      24.01.2022
     </div>
     <div>
       &#9733; <br />
