--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@
       </div>
       <div class="div2">
         &#9733; <br />
-        <strong>15.5</strong> <br />
+        <strong>24</strong> <br />
         All time
       </div>
+    </div>
+
+    <div>
+      &#9733; <br />
+      7.5 hour for javascript <br />
+      29.01.2022
+    </div>
+    <div>
+      &#9733; <br />
+      1 hour for javascript <br />
+      28.01.2022
     </div>
     <div>
       &#9733; <br />
