--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
       </div>
       <div class="div2">
         &#9733; <br />
-        <strong>24</strong> <br />
+        <strong>29.5</strong> <br />
         All time
       </div>
     </div>
 
+    <div>
+      &#9733; <br />
+      5.5 hour for javascript <br />
+      30.01.2022
+    </div>
     <div>
       &#9733; <br />
       7.5 hour for javascript <br />
