--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
       </div>
       <div class="div2">
         &#9733; <br />
-        <strong>31</strong> <br />
+        <strong>33</strong> <br />
         All time
       </div>
     </div>
 
+    <div>
+      &#9733; <br />
+      2 hour for javascript <br />
+      10.02.2022
+    </div>
     <div>
       &#9733; <br />
       1 hour for javascript <br />
