--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 
   <body>
     <div class="div">
-      <div>
+      <div class="bronze">
         &#9733; <br />
-        1 hour for javascript <br />
+        1  <br />
         15.01.2022
       </div>
-      <div class="div2">
-        &#9733; <br />
+       <div class="silver">
+        &#9733;&#9733; <br />
         <strong>33</strong> <br />
-        All time
+        Result
+      </div>
+      <div class="gold">
+        &#9733;&#9733;&#9733; <br />
+        <strong>1000</strong> <br />
+        Goal for the year
       </div>
     </div>
 
