--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
        <div class="silver">
         &#9733;&#9733; <br />
-        <strong>33</strong> <br />
+        <strong>37</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -26,6 +26,11 @@
       </div>
     </div>
 
+    <div>
+      &#9733; <br />
+      4 hours for javascript <br />
+      11.02.2022
+    </div>
     <div>
       &#9733; <br />
       2 hour for javascript <br />
