--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>52.5</strong> <br />
+        <strong>53</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -26,6 +26,11 @@
       </div>
     </div>
 
+    <div>
+      &#9733; <br />
+      0.5 hour for javascript <br />
+      18.02.2022
+    </div>
     <div>
       &#9733; <br />
       5.5 hours for javascript <br />
