--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>70.5</strong> <br />
+        <strong>74</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,107 +27,112 @@
     </div>
 
     <div>
-      &#9733; <br />
+      23<br />
+      3.5 hour for javascript <br />
+      05.03.2022
+    </div>
+    <div>
+      22 <br />
       3 hour for javascript <br />
       04.03.2022
     </div>
     <div>
-      &#9733; <br />
+      21 <br />
       5.5 hour for javascript <br />
       22.02.2022
     </div>
     <div>
-      &#9733; <br />
+      20 <br />
       3.5 hour for javascript <br />
       21.02.2022
     </div>
     <div>
-      &#9733; <br />
+      19 <br />
       5.5 hour for javascript <br />
       19.02.2022
     </div>
     <div>
-      &#9733; <br />
+      18 <br />
       0.5 hour for javascript <br />
       18.02.2022
     </div>
     <div>
-      &#9733; <br />
+      17 <br />
       5.5 hours for javascript <br />
       17.02.2022
     </div>
     <div>
-      &#9733; <br />
+      16 <br />
       2.5 hours for javascript <br />
       16.02.2022
     </div>
     <div>
-      &#9733; <br />
+      15 <br />
       4 hours for javascript <br />
       15.02.2022
     </div>
     <div>
-      &#9733; <br />
+      14 <br />
       3,5 hours for javascript <br />
       13.02.2022
     </div>
     <div>
-      &#9733; <br />
+      13 <br />
       4 hours for javascript <br />
       11.02.2022
     </div>
     <div>
-      &#9733; <br />
+      12 <br />
       2 hour for javascript <br />
       10.02.2022
     </div>
     <div>
-      &#9733; <br />
+      11 <br />
       1 hour for javascript <br />
       01.02.2022
     </div>
     <div>
-      &#9733; <br />
+      10 <br />
       1.5 hour for javascript <br />
       31.01.2022
     </div>
     <div>
-      &#9733; <br />
+      9 <br />
       5.5 hour for javascript <br />
       30.01.2022
     </div>
     <div>
-      &#9733; <br />
+      8 <br />
       7.5 hour for javascript <br />
       29.01.2022
     </div>
     <div>
-      &#9733; <br />
+      7 <br />
       1 hour for javascript <br />
       28.01.2022
     </div>
     <div>
-      &#9733; <br />
+      6 <br />
       2.5 hours for javascript <br />
       24.01.2022
     </div>
     <div>
-      &#9733; <br />
+      5 <br />
       1 hour for javascript <br />
       21.01.2022
     </div>
     <div>
-      &#9733; <br />
+      4 <br />
       4,5 hours for javascript <br />
       20.01.2022
     </div>
     <div>
-      &#9733; <br />
+      3 <br />
       3,5 hours for javascript <br />
       19.01.2022
     </div>
     <div>
-      &#9733; <br />
+      2 <br />
       3 hours for javascript <br />
       18.01.2022
     </div>
