--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>80.5</strong> <br />
+        <strong>82</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -26,6 +26,11 @@
       </div>
     </div>
 
+    <div>
+      23<br />
+      1.5 hour for javascript <br />
+      18.03.2022
+    </div>
     <div>
       23<br />
       1.5 hour for javascript <br />
