--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>85</strong> <br />
+        <strong>87.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,32 +27,37 @@
     </div>
 
     <div>
-      23<br />
+      30<br />
+      2.5 hours for javascript <br />
+      22.03.2022
+    </div>
+    <div>
+      29<br />
       3 hours for javascript <br />
       19.03.2022
     </div>
     <div>
-      23<br />
+      28<br />
       1.5 hour for javascript <br />
       18.03.2022
     </div>
     <div>
-      23<br />
+      27<br />
       1.5 hour for javascript <br />
       12.03.2022
     </div>
     <div>
-      23<br />
+      26<br />
       2.5 hour for javascript <br />
       11.03.2022
     </div>
     <div>
-      23<br />
+      25<br />
       2.5 hour for javascript <br />
       10.03.2022
     </div>
     <div>
-      23<br />
+      24<br />
       3.5 hour for javascript <br />
       05.03.2022
     </div>
