--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>87.5</strong> <br />
+        <strong>89.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -26,6 +26,11 @@
       </div>
     </div>
 
+    <div>
+      31<br />
+      2 hours for javascript <br />
+      23.03.2022
+    </div>
     <div>
       30<br />
       2.5 hours for javascript <br />
