--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h2>Меньше дней, больше часов!!!</h2>
     <div class="div">
       <div class="bronze">
         &#9733; <br />
@@ -16,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>89.5</strong> <br />
+        <strong>91.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -26,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      32<br />
+      2 hours for javascript <br />
+      24.03.2022
+    </div>
     <div>
       31<br />
       2 hours for javascript <br />
