--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>91.5</strong> <br />
+        <strong>96.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      33<br />
+      5 hours for javascript <br />
+      27.03.2022
+    </div>
     <div>
       32<br />
       2 hours for javascript <br />
