--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>100</strong> <br />
+        <strong>101</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      35<br />
+      1 hour1 for javascript <br />
+      29.03.2022
+    </div>
     <div>
       34<br />
       3.5 hours for javascript <br />
