--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>102</strong> <br />
+        <strong>104,5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      37<br />
+      2.5 hour for javascript <br />
+      04.04.2022
+    </div>
     <div>
       36<br />
       1 hour for javascript <br />
