--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>104,5</strong> <br />
+        <strong>108</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,8 +28,13 @@
     </div>
 
     <div>
+      38<br />
+      3.5 hours for javascript <br />
+      05.04.2022
+    </div>
+    <div>
       37<br />
-      2.5 hour for javascript <br />
+      2.5 hours for javascript <br />
       04.04.2022
     </div>
     <div>
