--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>110.5</strong> <br />
+        <strong>113</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,14 +28,19 @@
     </div>
 
     <div>
+      40<br />
+      2.5 hours for javascript <br />
+      07.04.2022
+    </div>
+    <div>
       39<br />
       2.5 hours for javascript <br />
-      05.04.2022
+      06.04.2022
     </div>
     <div>
       38<br />
       3.5 hours for javascript <br />
-      06.04.2022
+      05.04.2022
     </div>
     <div>
       37<br />
