--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>113</strong> <br />
+        <strong>115</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      41<br />
+      2 hour for javascript <br />
+      11.04.2022
+    </div>
     <div>
       40<br />
       2.5 hours for javascript <br />
