--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>116</strong> <br />
+        <strong>118</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      43<br />
+      2 hours for javascript <br />
+      13.04.2022
+    </div>
     <div>
       42<br />
       1 hour for javascript <br />
