--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>121</strong> <br />
+        <strong>123</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      46<br />
+      2 hours for javascript <br />
+      20.04.2022
+    </div>
     <div>
       45<br />
       2 hours for javascript <br />
