--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>125.5</strong> <br />
+        <strong>127</strong> <br />
         Result
       </div>
       <div class="gold">
         &#9733;&#9733;&#9733; <br />
-        <strong>1000</strong> <br />
-        Goal for the year
+        <strong>500</strong> <br />
+        Goal
       </div>
     </div>
 
+    <div>
+      48<br />
+      1.5 hours for javascript <br />
+      26.04.2022
+    </div>
     <div>
       47<br />
       2.5 hours for javascript <br />
