--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>127</strong> <br />
+        <strong>129</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      49<br />
+      2 hours for javascript <br />
+      28.04.2022
+    </div>
     <div>
       48<br />
       1.5 hours for javascript <br />
