--- a/index.html
+++ b/index.html
@@ -17,16 +17,26 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>131</strong> <br />
+        <strong>133</strong> <br />
         Result
       </div>
       <div class="gold">
         &#9733;&#9733;&#9733; <br />
-        <strong>500</strong> <br />
+        <strong>350</strong> <br />
         Goal
       </div>
     </div>
 
+    <div>
+      52<br />
+      1 hour for javascript <br />
+      05.05.2022
+    </div>
+    <div>
+      51<br />
+      1 hour for javascript <br />
+      04.05.2022
+    </div>
     <div>
       50<br />
       2 hours for javascript <br />
