--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>133</strong> <br />
+        <strong>136.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      53<br />
+      3.5 hours for javascript <br />
+      07.05.2022
+    </div>
     <div>
       52<br />
       1 hour for javascript <br />
