--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>136.5</strong> <br />
+        <strong>139</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      54<br />
+      2.5 hours for javascript <br />
+      09.05.2022
+    </div>
     <div>
       53<br />
       3.5 hours for javascript <br />
