--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>145.5</strong> <br />
+        <strong>148.5</strong> <br />
         Result
       </div>
       <div class="gold">
         &#9733;&#9733;&#9733; <br />
         <strong>350</strong> <br />
-        Goal
+        Offer
       </div>
     </div>
 
+    <div>
+      57<br />
+      3 hours for javascript <br />
+      23.05.2022
+    </div>
     <div>
       56<br />
       2.5 hours for javascript <br />
