--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>148.5</strong> <br />
+        <strong>154</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      58<br />
+      5.5 hours for javascript <br />
+      24.05.2022
+    </div>
     <div>
       57<br />
       3 hours for javascript <br />
