--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>154</strong> <br />
+        <strong>157, 5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      59<br />
+      3.5 hours for javascript <br />
+      25.05.2022
+    </div>
     <div>
       58<br />
       5.5 hours for javascript <br />
