--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>157, 5</strong> <br />
+        <strong>160</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      60<br />
+      2.5 hours for javascript <br />
+      26.05.2022
+    </div>
     <div>
       59<br />
       3.5 hours for javascript <br />
