--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
       <div class="bronze">
         &#9733; <br />
         1 <br />
+        01.06.2022
+      </div>
+      <div class="silver">
+        &#9733;&#9733; <br />
+        <strong>2.5</strong> <br />
+        Result
+      </div>
+      <div class="gold">
+        &#9733;&#9733;&#9733; <br />
+        <strong>200</strong> <br />
+        Offer
+      </div>
+    </div>
+
+    <div>
+      1<br />
+      <span class="hours">1.5</span>  <br />
+      01.06.2022
+    </div>
+    <div>
+      2<br />
+      <span class="hours">1</span>  <br />
+      2.06.2022
+    </div>
+
+    <div class="div">
+      <div class="bronze">
+        &#9733; <br />
+        1 <br />
         15.01.2022
       </div>
       <div class="silver">
