--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="div">
       <div class="bronze">
         &#9733; <br />
-        3 <br />
-        05.06.2022
+        2 <br />
+        08.06.2022
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>3</strong> <br />
+        <strong>2</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,9 +28,9 @@
     </div>
 
     <div>
-      1<br />
-      <span class="hours">3 </span> <br />
-      05.06.2022
+      Day 1<br />
+      <span class="hours">2h </span> <br />
+      08.06.2022
     </div>
 
     <div class="div">
