--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>2</strong> <br />
+        <strong>4.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -27,6 +27,11 @@
       </div>
     </div>
 
+    <div>
+      Day 2<br />
+      <span class="hours">2.5h </span> <br />
+      09.06.2022
+    </div>
     <div>
       Day 1<br />
       <span class="hours">2h </span> <br />
