--- a/index.html
+++ b/index.html
@@ -9,35 +9,7 @@
 
   <body>
     <h2>Меньше дней, больше часов!!!</h2>
-    <div class="div">
-      <div class="bronze">
-        &#9733; <br />
-        2 <br />
-        08.06.2022
-      </div>
-      <div class="silver">
-        &#9733;&#9733; <br />
-        <strong>4.5</strong> <br />
-        Result
-      </div>
-      <div class="gold">
-        &#9733;&#9733;&#9733; <br />
-        <strong>200</strong> <br />
-        Offer
-      </div>
-    </div>
-
-    <div>
-      Day 2<br />
-      <span class="hours">2.5h </span> <br />
-      09.06.2022
-    </div>
-    <div>
-      Day 1<br />
-      <span class="hours">2h </span> <br />
-      08.06.2022
-    </div>
-
+ 
     <div class="div">
       <div class="bronze">
         &#9733; <br />
@@ -46,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>160</strong> <br />
+        <strong>167</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -56,6 +28,21 @@
       </div>
     </div>
 
+    <div>
+      63<br />
+      2.5 hours for javascript <br />
+      15.06.2022
+    </div>
+    <div>
+      62<br />
+      2.5 hours for javascript <br />
+      09.06.2022
+    </div>
+    <div>
+      61<br />
+      2 hours for javascript <br />
+      08.06.2022
+    </div>
     <div>
       60<br />
       2.5 hours for javascript <br />
