--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>167</strong> <br />
+        <strong>169.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      64<br />
+      2.5 hours for javascript <br />
+      16.06.2022
+    </div>
     <div>
       63<br />
       2.5 hours for javascript <br />
