--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>174</strong> <br />
+        <strong>174.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      67<br />
+      0.5 hour for javascript <br />
+      25.06.2022
+    </div>
     <div>
       66<br />
       2 hours for javascript <br />
