--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>176.5</strong> <br />
+        <strong>177.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      69<br />
+      1 hour for javascript <br />
+      28.06.2022
+    </div>
     <div>
       68<br />
       2 hours for javascript <br />
