--- a/index.html
+++ b/index.html
@@ -1,374 +1,377 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body>
+    <h2>Делай максимум!!!</h2>
 
-<body>
-  <h2>Меньше дней, больше часов!!!</h2>
-
-  <div class="div">
-    <div class="bronze">
-      &#9733; <br />
-      1 <br />
-      15.01.2022
+    <div class="div">
+      <div class="bronze">
+        &#9733; <br />
+        1 <br />
+        15.01.2022
+      </div>
+      <div class="silver">
+        &#9733;&#9733; <br />
+        <strong>179.5</strong> <br />
+        Result
+      </div>
+      <div class="gold">
+        &#9733;&#9733;&#9733; <br />
+        <strong>350</strong> <br />
+        Offer
+      </div>
     </div>
-    <div class="silver">
-      &#9733;&#9733; <br />
-      <strong>178.5</strong> <br />
-      Result
-    </div>
-    <div class="gold">
-      &#9733;&#9733;&#9733; <br />
-      <strong>350</strong> <br />
-      Offer
-    </div>
-  </div>
 
-  <div>
-    70<br />
-    1 hour for javascript <br />
-    29.06.2022
-  </div>
-  <div>
-    69<br />
-    1 hour for javascript <br />
-    28.06.2022
-  </div>
-  <div>
-    68<br />
-    2 hours for javascript <br />
-    27.06.2022
-  </div>
-  <div>
-    67<br />
-    0.5 hour for javascript <br />
-    25.06.2022
-  </div>
-  <div>
-    66<br />
-    2 hours for javascript <br />
-    22.06.2022
-  </div>
-  <div>
-    65<br />
-    2.5 hours for javascript <br />
-    21.06.2022
-  </div>
-  <div>
-    64<br />
-    2.5 hours for javascript <br />
-    16.06.2022
-  </div>
-  <div>
-    63<br />
-    2.5 hours for javascript <br />
-    15.06.2022
-  </div>
-  <div>
-    62<br />
-    2.5 hours for javascript <br />
-    09.06.2022
-  </div>
-  <div>
-    61<br />
-    2 hours for javascript <br />
-    08.06.2022
-  </div>
-  <div>
-    60<br />
-    2.5 hours for javascript <br />
-    26.05.2022
-  </div>
-  <div>
-    59<br />
-    3.5 hours for javascript <br />
-    25.05.2022
-  </div>
-  <div>
-    58<br />
-    5.5 hours for javascript <br />
-    24.05.2022
-  </div>
-  <div>
-    57<br />
-    3 hours for javascript <br />
-    23.05.2022
-  </div>
-  <div>
-    56<br />
-    2.5 hours for javascript <br />
-    19.05.2022
-  </div>
-  <div>
-    55<br />
-    4 hours for javascript <br />
-    15.05.2022
-  </div>
-  <div>
-    54<br />
-    2.5 hours for javascript <br />
-    09.05.2022
-  </div>
-  <div>
-    53<br />
-    3.5 hours for javascript <br />
-    07.05.2022
-  </div>
-  <div>
-    52<br />
-    1 hour for javascript <br />
-    05.05.2022
-  </div>
-  <div>
-    51<br />
-    1 hour for javascript <br />
-    04.05.2022
-  </div>
-  <div>
-    50<br />
-    2 hours for javascript <br />
-    01.05.2022
-  </div>
-  <div>
-    49<br />
-    2 hours for javascript <br />
-    28.04.2022
-  </div>
-  <div>
-    48<br />
-    1.5 hours for javascript <br />
-    26.04.2022
-  </div>
-  <div>
-    47<br />
-    2.5 hours for javascript <br />
-    21.04.2022
-  </div>
-  <div>
-    46<br />
-    2 hours for javascript <br />
-    20.04.2022
-  </div>
-  <div>
-    45<br />
-    2 hours for javascript <br />
-    19.04.2022
-  </div>
-  <div>
-    44<br />
-    1 hour for javascript <br />
-    14.04.2022
-  </div>
-  <div>
-    43<br />
-    2 hours for javascript <br />
-    13.04.2022
-  </div>
-  <div>
-    42<br />
-    1 hour for javascript <br />
-    12.04.2022
-  </div>
-  <div>
-    41<br />
-    2 hour for javascript <br />
-    11.04.2022
-  </div>
-  <div>
-    40<br />
-    2.5 hours for javascript <br />
-    07.04.2022
-  </div>
-  <div>
-    39<br />
-    2.5 hours for javascript <br />
-    06.04.2022
-  </div>
-  <div>
-    38<br />
-    3.5 hours for javascript <br />
-    05.04.2022
-  </div>
-  <div>
-    37<br />
-    2.5 hours for javascript <br />
-    04.04.2022
-  </div>
-  <div>
-    36<br />
-    1 hour for javascript <br />
-    30.03.2022
-  </div>
-  <div>
-    35<br />
-    1 hour1 for javascript <br />
-    29.03.2022
-  </div>
-  <div>
-    34<br />
-    3.5 hours for javascript <br />
-    28.03.2022
-  </div>
-  <div>
-    33<br />
-    5 hours for javascript <br />
-    27.03.2022
-  </div>
-  <div>
-    32<br />
-    2 hours for javascript <br />
-    24.03.2022
-  </div>
-  <div>
-    31<br />
-    2 hours for javascript <br />
-    23.03.2022
-  </div>
-  <div>
-    30<br />
-    2.5 hours for javascript <br />
-    22.03.2022
-  </div>
-  <div>
-    29<br />
-    3 hours for javascript <br />
-    19.03.2022
-  </div>
-  <div>
-    28<br />
-    1.5 hour for javascript <br />
-    18.03.2022
-  </div>
-  <div>
-    27<br />
-    1.5 hour for javascript <br />
-    12.03.2022
-  </div>
-  <div>
-    26<br />
-    2.5 hour for javascript <br />
-    11.03.2022
-  </div>
-  <div>
-    25<br />
-    2.5 hour for javascript <br />
-    10.03.2022
-  </div>
-  <div>
-    24<br />
-    3.5 hour for javascript <br />
-    05.03.2022
-  </div>
-  <div>
-    22 <br />
-    3 hour for javascript <br />
-    04.03.2022
-  </div>
-  <div>
-    21 <br />
-    5.5 hour for javascript <br />
-    22.02.2022
-  </div>
-  <div>
-    20 <br />
-    3.5 hour for javascript <br />
-    21.02.2022
-  </div>
-  <div>
-    19 <br />
-    5.5 hour for javascript <br />
-    19.02.2022
-  </div>
-  <div>
-    18 <br />
-    0.5 hour for javascript <br />
-    18.02.2022
-  </div>
-  <div>
-    17 <br />
-    5.5 hours for javascript <br />
-    17.02.2022
-  </div>
-  <div>
-    16 <br />
-    2.5 hours for javascript <br />
-    16.02.2022
-  </div>
-  <div>
-    15 <br />
-    4 hours for javascript <br />
-    15.02.2022
-  </div>
-  <div>
-    14 <br />
-    3,5 hours for javascript <br />
-    13.02.2022
-  </div>
-  <div>
-    13 <br />
-    4 hours for javascript <br />
-    11.02.2022
-  </div>
-  <div>
-    12 <br />
-    2 hour for javascript <br />
-    10.02.2022
-  </div>
-  <div>
-    11 <br />
-    1 hour for javascript <br />
-    01.02.2022
-  </div>
-  <div>
-    10 <br />
-    1.5 hour for javascript <br />
-    31.01.2022
-  </div>
-  <div>
-    9 <br />
-    5.5 hour for javascript <br />
-    30.01.2022
-  </div>
-  <div>
-    8 <br />
-    7.5 hour for javascript <br />
-    29.01.2022
-  </div>
-  <div>
-    7 <br />
-    1 hour for javascript <br />
-    28.01.2022
-  </div>
-  <div>
-    6 <br />
-    2.5 hours for javascript <br />
-    24.01.2022
-  </div>
-  <div>
-    5 <br />
-    1 hour for javascript <br />
-    21.01.2022
-  </div>
-  <div>
-    4 <br />
-    4,5 hours for javascript <br />
-    20.01.2022
-  </div>
-  <div>
-    3 <br />
-    3,5 hours for javascript <br />
-    19.01.2022
-  </div>
-  <div>
-    2 <br />
-    3 hours for javascript <br />
-    18.01.2022
-  </div>
-</body>
-
+    <div>
+      71<br />
+      1 hour for javascript <br />
+      30.06.2022
+    </div>
+    <div>
+      70<br />
+      1 hour for javascript <br />
+      29.06.2022
+    </div>
+    <div>
+      69<br />
+      1 hour for javascript <br />
+      28.06.2022
+    </div>
+    <div>
+      68<br />
+      2 hours for javascript <br />
+      27.06.2022
+    </div>
+    <div>
+      67<br />
+      0.5 hour for javascript <br />
+      25.06.2022
+    </div>
+    <div>
+      66<br />
+      2 hours for javascript <br />
+      22.06.2022
+    </div>
+    <div>
+      65<br />
+      2.5 hours for javascript <br />
+      21.06.2022
+    </div>
+    <div>
+      64<br />
+      2.5 hours for javascript <br />
+      16.06.2022
+    </div>
+    <div>
+      63<br />
+      2.5 hours for javascript <br />
+      15.06.2022
+    </div>
+    <div>
+      62<br />
+      2.5 hours for javascript <br />
+      09.06.2022
+    </div>
+    <div>
+      61<br />
+      2 hours for javascript <br />
+      08.06.2022
+    </div>
+    <div>
+      60<br />
+      2.5 hours for javascript <br />
+      26.05.2022
+    </div>
+    <div>
+      59<br />
+      3.5 hours for javascript <br />
+      25.05.2022
+    </div>
+    <div>
+      58<br />
+      5.5 hours for javascript <br />
+      24.05.2022
+    </div>
+    <div>
+      57<br />
+      3 hours for javascript <br />
+      23.05.2022
+    </div>
+    <div>
+      56<br />
+      2.5 hours for javascript <br />
+      19.05.2022
+    </div>
+    <div>
+      55<br />
+      4 hours for javascript <br />
+      15.05.2022
+    </div>
+    <div>
+      54<br />
+      2.5 hours for javascript <br />
+      09.05.2022
+    </div>
+    <div>
+      53<br />
+      3.5 hours for javascript <br />
+      07.05.2022
+    </div>
+    <div>
+      52<br />
+      1 hour for javascript <br />
+      05.05.2022
+    </div>
+    <div>
+      51<br />
+      1 hour for javascript <br />
+      04.05.2022
+    </div>
+    <div>
+      50<br />
+      2 hours for javascript <br />
+      01.05.2022
+    </div>
+    <div>
+      49<br />
+      2 hours for javascript <br />
+      28.04.2022
+    </div>
+    <div>
+      48<br />
+      1.5 hours for javascript <br />
+      26.04.2022
+    </div>
+    <div>
+      47<br />
+      2.5 hours for javascript <br />
+      21.04.2022
+    </div>
+    <div>
+      46<br />
+      2 hours for javascript <br />
+      20.04.2022
+    </div>
+    <div>
+      45<br />
+      2 hours for javascript <br />
+      19.04.2022
+    </div>
+    <div>
+      44<br />
+      1 hour for javascript <br />
+      14.04.2022
+    </div>
+    <div>
+      43<br />
+      2 hours for javascript <br />
+      13.04.2022
+    </div>
+    <div>
+      42<br />
+      1 hour for javascript <br />
+      12.04.2022
+    </div>
+    <div>
+      41<br />
+      2 hour for javascript <br />
+      11.04.2022
+    </div>
+    <div>
+      40<br />
+      2.5 hours for javascript <br />
+      07.04.2022
+    </div>
+    <div>
+      39<br />
+      2.5 hours for javascript <br />
+      06.04.2022
+    </div>
+    <div>
+      38<br />
+      3.5 hours for javascript <br />
+      05.04.2022
+    </div>
+    <div>
+      37<br />
+      2.5 hours for javascript <br />
+      04.04.2022
+    </div>
+    <div>
+      36<br />
+      1 hour for javascript <br />
+      30.03.2022
+    </div>
+    <div>
+      35<br />
+      1 hour1 for javascript <br />
+      29.03.2022
+    </div>
+    <div>
+      34<br />
+      3.5 hours for javascript <br />
+      28.03.2022
+    </div>
+    <div>
+      33<br />
+      5 hours for javascript <br />
+      27.03.2022
+    </div>
+    <div>
+      32<br />
+      2 hours for javascript <br />
+      24.03.2022
+    </div>
+    <div>
+      31<br />
+      2 hours for javascript <br />
+      23.03.2022
+    </div>
+    <div>
+      30<br />
+      2.5 hours for javascript <br />
+      22.03.2022
+    </div>
+    <div>
+      29<br />
+      3 hours for javascript <br />
+      19.03.2022
+    </div>
+    <div>
+      28<br />
+      1.5 hour for javascript <br />
+      18.03.2022
+    </div>
+    <div>
+      27<br />
+      1.5 hour for javascript <br />
+      12.03.2022
+    </div>
+    <div>
+      26<br />
+      2.5 hour for javascript <br />
+      11.03.2022
+    </div>
+    <div>
+      25<br />
+      2.5 hour for javascript <br />
+      10.03.2022
+    </div>
+    <div>
+      24<br />
+      3.5 hour for javascript <br />
+      05.03.2022
+    </div>
+    <div>
+      22 <br />
+      3 hour for javascript <br />
+      04.03.2022
+    </div>
+    <div>
+      21 <br />
+      5.5 hour for javascript <br />
+      22.02.2022
+    </div>
+    <div>
+      20 <br />
+      3.5 hour for javascript <br />
+      21.02.2022
+    </div>
+    <div>
+      19 <br />
+      5.5 hour for javascript <br />
+      19.02.2022
+    </div>
+    <div>
+      18 <br />
+      0.5 hour for javascript <br />
+      18.02.2022
+    </div>
+    <div>
+      17 <br />
+      5.5 hours for javascript <br />
+      17.02.2022
+    </div>
+    <div>
+      16 <br />
+      2.5 hours for javascript <br />
+      16.02.2022
+    </div>
+    <div>
+      15 <br />
+      4 hours for javascript <br />
+      15.02.2022
+    </div>
+    <div>
+      14 <br />
+      3,5 hours for javascript <br />
+      13.02.2022
+    </div>
+    <div>
+      13 <br />
+      4 hours for javascript <br />
+      11.02.2022
+    </div>
+    <div>
+      12 <br />
+      2 hour for javascript <br />
+      10.02.2022
+    </div>
+    <div>
+      11 <br />
+      1 hour for javascript <br />
+      01.02.2022
+    </div>
+    <div>
+      10 <br />
+      1.5 hour for javascript <br />
+      31.01.2022
+    </div>
+    <div>
+      9 <br />
+      5.5 hour for javascript <br />
+      30.01.2022
+    </div>
+    <div>
+      8 <br />
+      7.5 hour for javascript <br />
+      29.01.2022
+    </div>
+    <div>
+      7 <br />
+      1 hour for javascript <br />
+      28.01.2022
+    </div>
+    <div>
+      6 <br />
+      2.5 hours for javascript <br />
+      24.01.2022
+    </div>
+    <div>
+      5 <br />
+      1 hour for javascript <br />
+      21.01.2022
+    </div>
+    <div>
+      4 <br />
+      4,5 hours for javascript <br />
+      20.01.2022
+    </div>
+    <div>
+      3 <br />
+      3,5 hours for javascript <br />
+      19.01.2022
+    </div>
+    <div>
+      2 <br />
+      3 hours for javascript <br />
+      18.01.2022
+    </div>
+  </body>
 </html>
