--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>180</strong> <br />
+        <strong>181.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      73<br />
+      1.5 hour for javascript <br />
+      01.07.2022
+    </div>
     <div>
       72<br />
       0.5 hour for javascript <br />
