--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>181.5</strong> <br />
+        <strong>183.5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -29,9 +29,14 @@
     </div>
 
     <div>
+      74<br />
+      2 hour for javascript <br />
+      03.07.2022
+    </div>
+    <div>
       73<br />
       1.5 hour for javascript <br />
-      01.07.2022
+      02.07.2022
     </div>
     <div>
       72<br />
