--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>183.5</strong> <br />
+        <strong>185</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      75<br />
+      1.5 hour for javascript <br />
+      06.07.2022
+    </div>
     <div>
       74<br />
       2 hour for javascript <br />
