--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>185</strong> <br />
+        <strong>187</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      76<br />
+      2 hour for javascript <br />
+      07.07.2022
+    </div>
     <div>
       75<br />
       1.5 hour for javascript <br />
