--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>188,5</strong> <br />
+        <strong>192,5</strong> <br />
         Result
       </div>
       <div class="gold">
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div>
+      78<br />
+      4 hour for javascript <br />
+      17.07.2022
+    </div>
     <div>
       77<br />
       1.5 hour for javascript <br />
