--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
       </div>
       <div class="silver">
         &#9733;&#9733; <br />
-        <strong>192,5</strong> <br />
+        <strong>197</strong> <br />
         Result
       </div>
       <div class="gold">
         &#9733;&#9733;&#9733; <br />
-        <strong>350</strong> <br />
+        <strong>1000</strong> <br />
         Offer
       </div>
     </div>
 
+    <div>
+      80<br />
+      2.5 hour for javascript <br />
+      19.07.2022
+    </div>
+    <div>
+      79<br />
+      2 hour for javascript <br />
+      18.07.2022
+    </div>
     <div>
       78<br />
       4 hour for javascript <br />
